[package]
name = "rustypigeonlib"
version = "1.0.0"
edition = "2021"
authors = ["TrinTragula <danielescarinc42@gmail.com>"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
num_cpus = "1.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
rustc-hash = "1.1.0"
lazy_static = "1.4.0"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"