[package]
name = "rustypigeon"
version = "1.1.0"
edition = "2021"
authors = ["TrinTragula <danielescarinc42@gmail.com>"]

[dependencies]
rustypigeonlib = { version = "*", path = "../" }

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
strip = true