[package]
name = "rustypigeonwasm"
version = "1.1.0"
edition = "2021"
authors = ["TrinTragula <danielescarinc42@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
rustypigeonlib = { version = "*", path = "../", default-features = false }
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
codegen-units = 1